assets/css/style.css
/* -------------------------------------------------------------------- Variables */
:root {
    --gold:#f1bf58;
    --sun:#fabc11;
    --black:black;
    --sapling:#ddc9a2;
    --harry-font:'Harry Potter', sans-serif; 
}

/* -------------------------------------------------------------------- Resets */

html {
    width: 100%;
}

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-image: url("../images/background.png");
    background-color:var(--gold);
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
}

a {
    text-decoration: none;
}


/* -------------------------------------------------------- Index.html page*/

/*Harry potter flying Animation */
#flying-animation img{
    position: absolute;
    animation: flying-harry 10s infinite normal ease;
    width:150px;
    height:150px;
    z-index: 1;
}

/*Home section*/
#game-name-img{
    display: block;
    width:50%;
    margin-top:10%;
    margin-left: auto;
    margin-right: auto;
}

#start-btn img{
    margin-top: 5%;
    transform: translateY(-6px);
    z-index: -1;
    width:250px;
}
#start-btn img:active {
    transform: translateY(-2px);
  
}

.wand-container{
 text-align: center;
 margin-top:-5%;
 margin-left: -35%;
}

#wand{
    width:200px;
}

/* --------------------------------------------- Animation keyframes*/

@keyframes flying-harry{
    0% {left:0px; top:0px}
    25% {top:300px;}
    50%{top:0px}
    100% {top:0px; left: 90%;}
}

/* -------------------------------------------------------------------- Game Page */
/*header section */

#timer-img{
   width:200px;
   position: fixed;
   top:0;
   left:0;
   padding: 20px;
}

#timer{
    position: fixed;
    font-weight: bolder;
    font-size: 30px;
    left:70px;
    line-height: 100px;
    top:10px;
}

#points-img{
    width:250px;
    position:fixed ;
    right:0;
    top:0;
    padding: 20px;
}

#points{
position: fixed;
font-weight: bolder;
font-size: 30px;
right:70px;
top:90px;
}

#header-instruction-container{
    text-align: center;
}
#header-instruction-container p{
    font-size: 40px;
    font-weight: bold;
    padding: 20px;
    margin-top: 1%;
}

/*card section*/
#card-container{
display:grid;
grid-template-columns:auto auto auto auto;
justify-content: center;
}
/* Code taken from https://www.w3schools.com/howto/howto_css_flip_card.asp*/
.flip-card {
  width: 200px;
  height:227px;
  perspective: 1000px;
  object-fit:cover;
  transition: transform .5s;
}
.flip-card img{
    width:100%;
    height: 100%;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
}

.flip-card-front, 
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.flip-card-front {
  transform: rotateY(180deg);
}

/* this class is added to the card that match*/
.turn-over{
    transform: rotateY(180deg);
}


/* -------------------------------------------------------------------- Modals */
#title-modal{
    font-family: var(--harry-font);                                             
}
.sun-color{
    color: var(--sun);
}
.modal-body{
    text-align: center;
    background-color: var(--sapling);
}
.modal-body button{
    background-color: var(--gold);
}

.modal-body button:hover{
    background-color: var(--sun);
}


/* -------------------------------------------------------- footer section */
footer{
    margin-top: 120px;
    width:100%;
    display: grid;
    grid-template-columns: auto;
    justify-content: center;
    padding: 20px;
}


#copyright-container p{
    font-size: 25px;
    font-weight: bold;
}

#social-media-links a{
    font-size: 40px;
    color:var(--black);
    margin:10px;
}

#social-media-links{
    display: grid;
    justify-content: center;
    grid-template-columns: auto auto auto auto;
    
}


/* -------------------------------------------------------------------- Media queries */


/* Medium devices (landscape tablets, from 1025px to 768px) */
@media only screen and (max-width: 919px) {
    /* ----------------------- Game Page media queries */
    #header-instruction-container p{
        font-size: 30px;
        margin-top: 10%;
    }

}


/* Small devices (phones, 768px and down) */
@media only screen and (max-width: 768px) {
 /* ----------------------- Game Page media queries */
    /* header */
    #timer{
        font-size: 25px;
        left:50px;
        line-height: 75px;
        top:10px;
    }

    #timer-img{
        width:150px;
        position: absolute;
        top:0;
        left:0;
        padding: 20px;
     }

     #points{
        position: absolute;
        font-weight: bolder;
        font-size: 25px;
        right:50px;
        top:60px;
    }
     #points-img{
         width:170px;
         position:absolute ;
         top:0;
         right:0;
         padding: 20px;
     }

     #header-instruction-container p{
        font-size: 25px;
        margin-top: 20%;
    }

     /* card section */
     .flip-card {
        width: 85px;
        height: 110px;
    }

/* ----------------------- Index.html page media queries*/
    /* home */
    #game-name-img{
        width:100%;
        margin-top:35%;
        padding: 10px;
    }

    .wand-container{
        text-align: center;
        margin-top:5%;
        margin-left: -35%;
    }
       
    #wand{
        width:150px;
    }

    #start-btn img{
        width:150px;
    }

    /* Animation media queries */
    @keyframes flying-harry  {
        0% {left:0px; top:0px}
        25% {top:300px;}
        50%{top:0px}
        100% {top:0px; left: 55%;}
    }
/* ----------------------- footer media queries*/
    footer{
        grid-template-columns: auto;
        justify-content: center;
        column-gap: 0;
        row-gap: 10px;
        padding:10px;
    }
    #copyright-container p{
        font-size: 20px;
    }
    #social-media-links a{
        font-size: 30px;
    }
}

